fixed logo not displaying on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     padding: 0;;
     font-family: 'Kumbh Sans', sans-serif;
     outline: 1px solid red;
-
+    overflow-y: auto;
 }
 
 
@@ -118,6 +118,19 @@
 
     #navbar__logo {
         padding-left: 25px;
+
+        background-color: #ff8177;
+        background-image: linear-gradient(to top, #ff0844 00%, #ffb199 100%);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-text-fill-color: transparent;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        text-decoration: none;
+        font-size: 1.5rem;
     }
 
     .navbar__toggle .bar {
@@ -1117,6 +1130,18 @@
 
     #footer__logo {
         margin-bottom: 2rem;
+        background-color: #ff8177;
+        background-image: linear-gradient(to top, #ff0844 00%, #ffb199 100%);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-text-fill-color: transparent;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        text-decoration: none;
+        font-size: 2rem;
     }
 
     .website__rights {
